[package]
name = "opensubtitleshash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "cargo"] }
eyre = "0.6.8"
inquire = "0.5.3"
reqwest = { version = "0.11.14", features = ["rustls", "json"] }
scraper = "0.14.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zip = "0.6.4"
