[package]
name = "opensubtitlescli"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "cargo"] }
eyre = "0.6.8"
futures = "0.3.30"
futures-util = "0.3.30"
inquire = "0.5.3"
itertools = "0.12.1"
ordered-float = "4.2.0"
reqwest = { version = "0.11.14", features = ["rustls", "json"] }
scraper = "0.14.0"
tap = "1.0.1"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zip = "0.6.4"
